Fix trending bar alignnment for compressed links.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -8352,7 +8352,10 @@ body.with-listing-chooser {
     margin-left: 17px;
     body.compressed-display & {
         margin-left: 15px;
-        padding-left: 15px;
+
+        .midcol-spacer {
+            width: 15px;
+        }
     }
 
     // hax to align trending subreddits list with links/thumbnails
